# Wav2TextGrid

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  macos-requirements.txt  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: code-quality.yml  inference.yml  publish.yml  security.yml  test-inference.yml
Wav2TextGrid/: __init__.py  wav2textgrid.py  wav2textgrid_train.py
Wav2TextGrid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Wav2TextGrid/aligner_core/: __init__.py  aligner.py  alignermodel.py  processors.py  utils.py  xvec_extractor.py
Wav2TextGrid/examples/: voxceleb.lab
Wav2TextGrid/utils/: aligner_dataset.py  args.py  data_collator.py  dataset_utils.py  processor.py  training_routine.py
examples/: 0.lab
scripts/: run_inference_workflow.py  test_local.py
src/Wav2TextGrid/: __init__.py  wav2textgrid.py  wav2textgrid_train.py
src/Wav2TextGrid/aligner_core/: __init__.py  aligner.py  alignermodel.py  processors.py  utils.py  xvec_extractor.py
src/Wav2TextGrid/utils/: __init__.py  aligner_dataset.py  args.py  data_collator.py  dataset_utils.py  postproc.py  processor.py  training_routine.py
