[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Wav2TextGrid"
version = "0.1.2"
description = "A python forced alignment package"
readme = "README.md"
authors = [
  { name = "Prad Kadambi", email = "pkadambi@asu.edu" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS 15.6.1",
  "Operating System :: POSIX :: Linux :: Ubuntu",
  "Operating System :: Microsoft :: Windows :: Windows 11",
]

dependencies = [
    "argparse>=1.4.0",
    "g2p-en>=2.1.0",
    "librosa>=0.11.0",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "praatio>=6.2.0",
    "speechbrain>=1.0.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
]

[project.optional-dependencies]
train = [
    "datasets>=4.0.0",
    "accelerate>=0.26.0",
]

[project.scripts]
w2tg = "Wav2TextGrid.wav2textgrid:main"
w2tg_train = "Wav2TextGrid.wav2textgrid_train:main"

[tool.setuptools.packages.find]
where = ["src"]
