[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Wav2TextGrid"
version = "0.1.2"
description = "A python forced alignment package"
readme = "README.md"
authors = [
  { name = "Prad Kadambi", email = "pkadambi@asu.edu" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS 15.6.1",
  "Operating System :: POSIX :: Linux :: Ubuntu",
  "Operating System :: Microsoft :: Windows :: Windows 11",
]

dependencies = [
    "argparse>=1.4.0",
    "g2p-en>=2.1.0",
    "librosa>=0.11.0",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "praatio>=6.2.0",
    "speechbrain>=1.0.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
]

[project.optional-dependencies]
train = [
    "datasets>=4.0.0",
    "accelerate>=0.26.0",
]
code_quality = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pylint",
]

[project.scripts]
w2tg = "Wav2TextGrid.wav2textgrid:main"
w2tg_train = "Wav2TextGrid.wav2textgrid_train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 100
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    "notebooks/.ipynb_checkpoints"
]
ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | \.git
  | \.pytest_cache
  | \.mypy_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    ".venv",
    "build",
    "dist",
]